--- a/1.md
+++ b/1.md
@@ -1,1 +1,4 @@
-Topic  Introduction to Docker | Installation of Docker on redhat 
+# Topic : Introduction to Docker | Installation of Docker on redhat 
+
+- [x] without RAM we cant not  launch any OS 
+- [x] Using docker, you can deploy your OS just in 1 sec.
