--- a/1.md
+++ b/1.md
@@ -3,3 +3,16 @@
 - [x] without RAM we cant not  launch any OS 
 - [x] Using docker, you can deploy your OS just in 1 sec.
 * Introduction to docker invironment 
+```
+# docker ps 
+# docker run ubuntu: 14.04
+# yum  -> bash : yum : command mot found 
+#apt get 
+# free -m  -> for checking the ram 
+# pscpu     -> for checking cpu 
+# ifcong    -> for checking Ip
+# docker ps -> it will all the unique name(ID) like prove_zhukousky
+# docker rm prove_zhukousky  -> this command failed because currently our OS is in running state 
+# docker rm -f prove_zhukousky   -> f means forcely stop
+
+```
