--- a/1.md
+++ b/1.md
@@ -16,3 +16,6 @@
 # docker rm -f prove_zhukousky   -> f means forcely stop
 
 ```
+there are two version of doker (rpm)
+* Community editiion 
+* Enterprise edition 
