--- a/1.md
+++ b/1.md
@@ -19,3 +19,6 @@
 there are two version of doker (rpm)
 * Community editiion 
 * Enterprise edition 
+- [x]  on Internet : command for installing docker is :
+> curl -sSL https://get.docker.com | sh
+it wil show error message : { curl :(6) could not resolve  host: get.docker.com }, if you ping to google, it will show redhat only suport EE.
