--- a/1.md
+++ b/1.md
@@ -22,3 +22,4 @@ there are two version of doker (rpm)
 - [x]  on Internet : command for installing docker is :
 > curl -sSL https://get.docker.com | sh
 it wil show error message : { curl :(6) could not resolve  host: get.docker.com }, if you ping to google, it will show redhat only suport EE.
+* Installing process start from here 
