--- a/1.md
+++ b/1.md
@@ -23,3 +23,19 @@ there are two version of doker (rpm)
 > curl -sSL https://get.docker.com | sh
 it wil show error message : { curl :(6) could not resolve  host: get.docker.com }, if you ping to google, it will show redhat only suport EE.
 * Installing process start from here 
+```
+step (1) Go to google and type : docker rpm
+step (2) copy  the url of Index of linux/centos/7/.86-67/stable/
+step (3) go to /etc/yum.repo.dy
+step(4) create a folder 'docker.repo' and past the url with certain formate 
+formate is :- 
+_______________________________________________________________
+[docker]
+baseurl = URL
+gpg chcecking =0
+_______________________________________________________________
+step(5)  now delete d.repo file if you have 
+step(6) now install the docker [commnd :- #yum install docker-ce]
+step(7) now start docker services [#systemctl start docker]
+step(8) run a command to show which version of docker we have in our system [#rpm -q docker-ce], there is one more command [#docker pa ]
+```
