--- a/1.md
+++ b/1.md
@@ -39,3 +39,10 @@ step(6) now install the docker [commnd :- #yum install docker-ce]
 step(7) now start docker services [#systemctl start docker]
 step(8) run a command to show which version of docker we have in our system [#rpm -q docker-ce], there is one more command [#docker pa ]
 ```
+there are 4 things about Operating system
+* if any OS is launch on baremetal/hardware, then it will know as *OS*.
+* if any OS is launch on any virtualization pateform, then it will know as *VM*.
+*  if any OS is launch on cloud ,then it will know as *Instance*.
+*  if any OS is launch on docker, then it will knows as *container*.
+
+
