--- a/1.md
+++ b/1.md
@@ -45,4 +45,11 @@ there are 4 things about Operating system
 *  if any OS is launch on cloud ,then it will know as *Instance*.
 *  if any OS is launch on docker, then it will knows as *container*.
 
+Now go to hub.docker.com 
+```
+step(1) select ubuntu
+step(2) download this image by command 
+step(3) check the latest  image on your system [#docker image]
+step(4) whatever image you got just run it [#docker run -t -i ubuntu:14.04]
+```
 
