--- a/0.md
+++ b/0.md
@@ -25,6 +25,8 @@ it wil show error message : { curl :(6) could not resolve  host: get.docker.com 
 * Installing process start from here 
 ```
 step (1) Go to google and type : docker rpm
+![image](https://user-images.githubusercontent.com/49730521/84570661-8bd20b00-adac-11ea-8677-be41e297621c.png)
+
 step (2) copy  the url of Index of linux/centos/7/.86-67/stable/
 step (3) go to /etc/yum.repo.dy
 step(4) create a folder 'docker.repo' and past the url with certain formate 
