--- a/0.md
+++ b/0.md
@@ -27,6 +27,8 @@ step (1) Go to google and type : docker rpm
 ![image](https://user-images.githubusercontent.com/49730521/84570661-8bd20b00-adac-11ea-8677-be41e297621c.png)
 
 step (2) copy  the url of Index of linux/centos/7/.86-67/stable/
+![image](https://user-images.githubusercontent.com/49730521/84570718-dfdcef80-adac-11ea-8ff8-0ff1cd117c9f.png)
+
 step (3) go to /etc/yum.repo.dy
 step(4) create a folder 'docker.repo' and past the url with certain formate 
 formate is :- 
