--- a/0.md
+++ b/0.md
@@ -33,10 +33,8 @@ step (3) go to /etc/yum.repo.dy
 step(4) create a folder 'docker.repo' and past the url with certain formate 
 formate is :- 
 _______________________________________________________________
-[docker]
-baseurl = URL
-gpg chcecking =0
-_______________________________________________________________
+![image](https://user-images.githubusercontent.com/49730521/84570882-bbcdde00-adad-11ea-954c-1a46b295b715.png)
+_____________________________________________
 step(5)  now delete d.repo file if you have 
 step(6) now install the docker [commnd :- #yum install docker-ce]
 step(7) now start docker services [#systemctl start docker]
