--- a/0.md
+++ b/0.md
@@ -35,8 +35,9 @@ formate is :-
 _______________________________________________________________
 ![image](https://user-images.githubusercontent.com/49730521/84570882-bbcdde00-adad-11ea-954c-1a46b295b715.png)
 _____________________________________________
-step(5)  now delete d.repo file if you have 
-step(6) now install the docker [commnd :- #yum install docker-ce]
+step(5)  now delete d.repo file if you have ,  now install the docker [commnd :- #yum install docker-ce]
+![image](https://user-images.githubusercontent.com/49730521/84570962-1830fd80-adae-11ea-8b25-97272e89aa45.png)
+
 step(7) now start docker services [#systemctl start docker]
 step(8) run a command to show which version of docker we have in our system [#rpm -q docker-ce], there is one more command [#docker pa ]
 
