--- a/0.md
+++ b/0.md
@@ -38,8 +38,9 @@ _____________________________________________
 step(5)  now delete d.repo file if you have ,  now install the docker [commnd :- #yum install docker-ce]
 ![image](https://user-images.githubusercontent.com/49730521/84570962-1830fd80-adae-11ea-8b25-97272e89aa45.png)
 
-step(7) now start docker services [#systemctl start docker]
-step(8) run a command to show which version of docker we have in our system [#rpm -q docker-ce], there is one more command [#docker pa ]
+step(6) now start docker services [#systemctl start docker]
+![image](https://user-images.githubusercontent.com/49730521/84571004-60502000-adae-11ea-8b0c-6658f96ad227.png)
+
 
 there are 4 things about Operating system
 * if any OS is launch on baremetal/hardware, then it will know as *OS*.
