--- a/0.md
+++ b/0.md
@@ -41,6 +41,8 @@ step(5)  now delete d.repo file if you have ,  now install the docker [commnd :-
 step(6) now start docker services [#systemctl start docker]
 ![image](https://user-images.githubusercontent.com/49730521/84571004-60502000-adae-11ea-8b0c-6658f96ad227.png)
 
+![image](https://user-images.githubusercontent.com/49730521/84571049-955c7280-adae-11ea-80e6-badff906a54f.png)
+
 
 there are 4 things about Operating system
 * if any OS is launch on baremetal/hardware, then it will know as *OS*.
