--- a/0.md
+++ b/0.md
@@ -50,11 +50,13 @@ there are 4 things about Operating system
 *  if any OS is launch on cloud ,then it will know as *Instance*.
 *  if any OS is launch on docker, then it will knows as *container*.
 
-Now go to hub.docker.com 
-```
-step(1) select ubuntu
-step(2) download this image by command 
+##  process to download image from  hub.docker.com 
+
+
+step(1) select ubuntu & download this image by command 
+![image](https://user-images.githubusercontent.com/49730521/84571138-10258d80-adaf-11ea-9960-670a1bed0b82.png)
+
 step(3) check the latest  image on your system [#docker image]
 step(4) whatever image you got just run it [#docker run -t -i ubuntu:14.04]
-```
+
 
