--- a/0.md
+++ b/0.md
@@ -56,7 +56,8 @@ there are 4 things about Operating system
 step(1) select ubuntu & download this image by command 
 ![image](https://user-images.githubusercontent.com/49730521/84571138-10258d80-adaf-11ea-9960-670a1bed0b82.png)
 
-step(3) check the latest  image on your system [#docker image]
-step(4) whatever image you got just run it [#docker run -t -i ubuntu:14.04]
+* check the latest  image on your system [#docker image]
+* whatever image you got just run it [#docker run -t -i ubuntu:14.04]
 
+![image](https://user-images.githubusercontent.com/49730521/84571281-e1f47d80-adaf-11ea-81e8-a01cf00dd862.png)
 
