--- a/1.md
+++ b/1.md
@@ -2,3 +2,6 @@
 ![image](https://user-images.githubusercontent.com/49730521/84571407-8b3b7380-adb0-11ea-89bd-978410dec093.png)
 ![image](https://user-images.githubusercontent.com/49730521/84571495-1ddc1280-adb1-11ea-9316-02e44579a15a.png)
 ![image](https://user-images.githubusercontent.com/49730521/84571507-3815f080-adb1-11ea-9f4f-eb21b18232b4.png)
+
+![image](https://user-images.githubusercontent.com/49730521/84571526-57ad1900-adb1-11ea-816a-e47a6bfc2aae.png)
+
