--- a/1.md
+++ b/1.md
@@ -5,3 +5,6 @@
 
 ![image](https://user-images.githubusercontent.com/49730521/84571526-57ad1900-adb1-11ea-816a-e47a6bfc2aae.png)
 
+
+
+![image](https://user-images.githubusercontent.com/49730521/84571543-76131480-adb1-11ea-90d8-975321fcfb72.png)
