--- a/1.md
+++ b/1.md
@@ -8,3 +8,7 @@
 
 
 ![image](https://user-images.githubusercontent.com/49730521/84571543-76131480-adb1-11ea-90d8-975321fcfb72.png)
+
+
+
+![image](https://user-images.githubusercontent.com/49730521/84571573-9f33a500-adb1-11ea-9d4e-3df3ebacbdc2.png)
