--- a/1.md
+++ b/1.md
@@ -12,3 +12,4 @@
 
 
 ![image](https://user-images.githubusercontent.com/49730521/84571573-9f33a500-adb1-11ea-9d4e-3df3ebacbdc2.png)
+![image](https://user-images.githubusercontent.com/49730521/84571608-ea4db800-adb1-11ea-9831-5aad301d8c81.png)
