--- a/1.md
+++ b/1.md
@@ -16,3 +16,5 @@
 ![image](https://user-images.githubusercontent.com/49730521/84571608-ea4db800-adb1-11ea-9831-5aad301d8c81.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571635-1c5f1a00-adb2-11ea-9649-8328a24004aa.png)
+
+![image](https://user-images.githubusercontent.com/49730521/84571655-3698f800-adb2-11ea-8272-6b52160f1768.png)
