--- a/1.md
+++ b/1.md
@@ -20,3 +20,5 @@
 ![image](https://user-images.githubusercontent.com/49730521/84571671-4c0e2200-adb2-11ea-9334-73ca2d35de3d.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571685-6811c380-adb2-11ea-842d-b1c8c214726d.png)
+
+![image](https://user-images.githubusercontent.com/49730521/84571706-95f70800-adb2-11ea-923a-8f124bcd6515.png)
