--- a/1.md
+++ b/1.md
@@ -22,3 +22,5 @@
 ![image](https://user-images.githubusercontent.com/49730521/84571685-6811c380-adb2-11ea-842d-b1c8c214726d.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571706-95f70800-adb2-11ea-923a-8f124bcd6515.png)
+
+![image](https://user-images.githubusercontent.com/49730521/84571804-6ac0e880-adb3-11ea-965f-29f70c7a6b27.png)
