--- a/1.md
+++ b/1.md
@@ -25,3 +25,5 @@
 
 ![image](https://user-images.githubusercontent.com/49730521/84571821-862bf380-adb3-11ea-8382-9fa90790a98f.png)
 
+![image](https://user-images.githubusercontent.com/49730521/84571839-ac519380-adb3-11ea-8669-87f4df1c3fd1.png)
+
