--- a/1.md
+++ b/1.md
@@ -1,5 +1,5 @@
 
-
+docker info will tell all the neccesory information of docker in your system
 ![image](https://user-images.githubusercontent.com/49730521/84571407-8b3b7380-adb0-11ea-89bd-978410dec093.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571495-1ddc1280-adb1-11ea-9316-02e44579a15a.png)
