--- a/1.md
+++ b/1.md
@@ -3,9 +3,9 @@
 ![image](https://user-images.githubusercontent.com/49730521/84571407-8b3b7380-adb0-11ea-89bd-978410dec093.png)
 
 (2) docker image : checks how many images is/are avaliable in docker & download centos7 image from docker hub 
-
 ![image](https://user-images.githubusercontent.com/49730521/84571495-1ddc1280-adb1-11ea-9316-02e44579a15a.png)
 
+(3) docker ps : checks how many images is/are running on docker & run centos services 
 ![image](https://user-images.githubusercontent.com/49730521/84571507-3815f080-adb1-11ea-9f4f-eb21b18232b4.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571526-57ad1900-adb1-11ea-816a-e47a6bfc2aae.png)
