--- a/1.md
+++ b/1.md
@@ -8,6 +8,7 @@
 (3) docker ps : checks how many images is/are running on docker & run centos services 
 ![image](https://user-images.githubusercontent.com/49730521/84571507-3815f080-adb1-11ea-9f4f-eb21b18232b4.png)
 
+(4) if some ubuntu command is not works on centos then install it 
 ![image](https://user-images.githubusercontent.com/49730521/84571526-57ad1900-adb1-11ea-816a-e47a6bfc2aae.png)
 
 
