--- a/1.md
+++ b/1.md
@@ -11,8 +11,7 @@
 (4) if some ubuntu command is not works on centos then install it 
 ![image](https://user-images.githubusercontent.com/49730521/84571526-57ad1900-adb1-11ea-816a-e47a6bfc2aae.png)
 
-
-
+(5) docker ps -a : works almost same like log(comtain all the history of OS running/terminated)
 ![image](https://user-images.githubusercontent.com/49730521/84571543-76131480-adb1-11ea-90d8-975321fcfb72.png)
 
 
