--- a/1.md
+++ b/1.md
@@ -14,8 +14,7 @@
 (5) docker ps -a : works almost same like log(comtain all the history of OS running/terminated)
 ![image](https://user-images.githubusercontent.com/49730521/84571543-76131480-adb1-11ea-90d8-975321fcfb72.png)
 
-
-
+(6) docker attach "Unique-name" will connect os to docker (like ssh by putty)
 ![image](https://user-images.githubusercontent.com/49730521/84571573-9f33a500-adb1-11ea-9d4e-3df3ebacbdc2.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571608-ea4db800-adb1-11ea-9831-5aad301d8c81.png)
