--- a/1.md
+++ b/1.md
@@ -17,6 +17,7 @@
 (6) docker attach "Unique-name" will connect os to docker (like ssh by putty)
 ![image](https://user-images.githubusercontent.com/49730521/84571573-9f33a500-adb1-11ea-9d4e-3df3ebacbdc2.png)
 
+(7) You can change the unique name and replace it by, what you want. 
 ![image](https://user-images.githubusercontent.com/49730521/84571608-ea4db800-adb1-11ea-9831-5aad301d8c81.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571635-1c5f1a00-adb2-11ea-9649-8328a24004aa.png)
