--- a/1.md
+++ b/1.md
@@ -11,7 +11,7 @@
 (4) if some ubuntu command is not works on centos then install it 
 ![image](https://user-images.githubusercontent.com/49730521/84571526-57ad1900-adb1-11ea-816a-e47a6bfc2aae.png)
 
-(5) docker ps -a : works almost same like log(comtain all the history of OS running/terminated)
+(5) docker ps -a : works almost same like log(contain all the history of OS running/terminated)
 ![image](https://user-images.githubusercontent.com/49730521/84571543-76131480-adb1-11ea-90d8-975321fcfb72.png)
 
 (6) docker attach "Unique-name" will connect os to docker (like ssh by putty)
@@ -20,6 +20,7 @@
 (7) You can change the unique name and replace it by, what you want. 
 ![image](https://user-images.githubusercontent.com/49730521/84571608-ea4db800-adb1-11ea-9831-5aad301d8c81.png)
 
+(8) if some ubuntu command is not works on centos then install it
 ![image](https://user-images.githubusercontent.com/49730521/84571635-1c5f1a00-adb2-11ea-9649-8328a24004aa.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571671-4c0e2200-adb2-11ea-9334-73ca2d35de3d.png)
@@ -28,6 +29,7 @@
 
 ![image](https://user-images.githubusercontent.com/49730521/84571706-95f70800-adb2-11ea-923a-8f124bcd6515.png)
 
+(9) Data of docker is parmanent, here I creat a file "Linux.txt" and the exit from the this OS, now logged in same OS, no need to launch new OS becuase in new OS linux.txt is exist .
 ![image](https://user-images.githubusercontent.com/49730521/84571821-862bf380-adb3-11ea-8382-9fa90790a98f.png)
 
 ![image](https://user-images.githubusercontent.com/49730521/84571839-ac519380-adb3-11ea-8669-87f4df1c3fd1.png)
