--- a/1.md
+++ b/1.md
@@ -34,4 +34,5 @@
 
 ![image](https://user-images.githubusercontent.com/49730521/84571839-ac519380-adb3-11ea-8669-87f4df1c3fd1.png)
 
+(10) If you face net connectivity then apply this command 
 ![image](https://user-images.githubusercontent.com/49730521/84571866-d440f700-adb3-11ea-8867-10f664344739.png)
